--- a/Projects/Flower Classification with TPUs/flower-classification-with-tpus-ensemble.ipynb
+++ b/Projects/Flower Classification with TPUs/flower-classification-with-tpus-ensemble.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook we ensemble different models that were trained in previous notebook \"Flower Classification with TPUs (one model)\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fda71946",
    "metadata": {
     "papermill": {
@@ -157,6 +164,13 @@
    "source": [
     "<a name=\"2\"></a>\n",
     "# 2. Distribution Strategy #"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A TPU has eig We tell TensorFlow how to make use of all these cores at once through a distribution strategy. The following cell creates the distribution strategy that we'll later apply to our model. We'll use the distribution strategy when we create our neural network model. Then, TensorFlow will distribute the training among the eight TPU cores by creating eight different replicas of the model, one for each core."
    ]
   },
   {
@@ -492,6 +506,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When used with TPUs, datasets need to be stored in a Google Cloud Storage bucket. We can use data from any public GCS bucket by giving its path just like we would data from '/kaggle/input'. The following will retrieve the GCS path for this competition's dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "93f00471",
@@ -796,7 +817,8 @@
     "<a name=\"5\"></a>\n",
     "# 5. Ensemble #\n",
     "\n",
-    "## Learning Rate Schedule ##"
+    "## Learning Rate Schedule ##\n",
+    "The Learning Rate Schedule feature is similar to the one in the previous notebook."
    ]
   },
   {
@@ -851,6 +873,13 @@
     "              exp_decay)\n",
     "\n",
     "lr_callback = tf.keras.callbacks.LearningRateScheduler(exponential_lr, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The 'best_model' is our trained models from previous notebook:"
    ]
   },
   {
@@ -1617,6 +1646,13 @@
     "recall = recall_score(cm_correct_labels, cm_predictions, labels=labels, average='macro')\n",
     "\n",
     "display_confusion_matrix(cmat, score, precision, recall)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the ensembled result is better than the result with one model"
    ]
   },
   {
